hphp/hack/test/typecheck/is_expression/tconst6.php.exp
File "tconst6.php", line 16, characters 13-24:
Invalid "is" expression hint (Typing[4199])
  File "tconst6.php", line 16, characters 13-24:
  The "is" operator should not be used with a type with generics, because generics are erased at runtime
